# ML-Deployment

./: README.md
libtorch/: CMakeLists.txt  convert_to_jit.py  main.cpp
libtorch/person_segmentator/: person_segmentator.cpp  person_segmentator.h
ort/: CMakeLists.txt  main.cpp
ort/person_segmentator/: person_segmentator.cpp
src/: CMakeLists.txt  convert_to_jit.py  main.cpp
src/utils/: utils.cpp  utils.h
